@@ -4,6 +4,3 @@
 **  ---> but equivalent node `@samp{node}' found 
 *** Unknown node in menu entry `@strong{node}' (l. 12)
 **  ---> but equivalent node `@samp{node}' found 
-*** Bug: @samp{node}, file undef (l. 12)
-*** Bug: @samp{node}, file undef (l. 21)
-*** Bug: @samp{node}, file undef (l. 25)
